--- a/arrays.ipynb
+++ b/arrays.ipynb
@@ -1,36 +1,151 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "27e19eef",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
+   "metadata": {},
    "source": [
     "Arrays are stored contiguosly in memory, i.e. stored together, one by one.\n",
     "\n",
     "Hence, insert and delete operations at the beginning or the middle are O(n)\n",
+    "Inserting at the end is/can be O(n)\n",
     "Traversing is O(n)\n",
     "Indexing is O(1)\n",
-    "\n"
+    "\n",
+    "Arrays are of two types, static and dynamic arrays.\n",
+    "Static array, the length of the list is predefined. \n",
+    "In dynamic, it grows by itself."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "bc609bc7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2200, 2350, 2600, 1930, 2190, 1980]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expenses = [2200, 2350, 2600, 2130, 2190]\n",
+    "expenses[1] - expenses[0]\n",
+    "sum(expenses[:3])\n",
+    "for x in expenses:\n",
+    "  if x == 2000:\n",
+    "    print(\"Yes\")\n",
+    "    \n",
+    "expenses.append(1980)\n",
+    "expenses[3] = expenses[3] - 200\n",
+    "expenses\n",
+    "    \n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "3f63bc12",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['black panther',\n",
+       " 'captain america',\n",
+       " 'doctor strange',\n",
+       " 'iron man',\n",
+       " 'spider man']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "heros=['spider man','thor','hulk','iron man','captain america']\n",
+    "\n",
+    "len(heros)\n",
+    "heros.append(\"black panther\")\n",
+    "heros.pop()\n",
+    "heros.insert(3, \"black panther\")\n",
+    "heros = [heros[0], \"doctor strange\", *heros[3:]]\n",
+    "heros.sort()\n",
+    "heros"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc609bc7",
+   "id": "732d7922",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(filter(lambda x: x%2 !=0, range(20)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7996f52e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def myfunc(n):\n",
+    "  return lambda a : a * n\n",
+    "\n",
+    "mydoubler = myfunc(2)\n",
+    "mydoubler(12)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
