print function add

--- a/linkedList.ipynb
+++ b/linkedList.ipynb
@@ -19,7 +19,21 @@
     "  def insert_at_beginning(self, data):\n",
     "    node = Node(data, self.head)\n",
     "    # node.next = self.head\n",
-    "    self.head = node"
+    "    self.head = node\n",
+    "    \n",
+    "  def delete_at_beginning(self):\n",
+    "    self.head = self.head.next\n",
+    "    \n",
+    "  def print(self):\n",
+    "    if self.head is None:\n",
+    "      print(\"List is empty \")\n",
+    "      return\n",
+    "    else:\n",
+    "      itr = self.head\n",
+    "      llstr = \"\"\n",
+    "      while itr:\n",
+    "        llstr += str(itr.val) + \"-->\"\n",
+    "        itr = itr.next"
    ]
   }
  ],
