--- a/linkedList.ipynb
+++ b/linkedList.ipynb
@@ -21,6 +21,8 @@
     "    # node.next = self.head\n",
     "    self.head = node\n",
     "    \n",
+    "# Daily check in\n",
+    "    \n",
     "  def delete_at_beginning(self):\n",
     "    self.head = self.head.next\n",
     "    \n",
