--- a/linkedList.ipynb
+++ b/linkedList.ipynb
@@ -37,6 +37,23 @@
     "        llstr += str(itr.val) + \"-->\"\n",
     "        itr = itr.next"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d86c3e1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "  def __init__(self, data, next):\n",
+    "    self.data = data\n",
+    "    self.next = next\n",
+    "\n",
+    "class LinkedList:\n",
+    "  def __init__(self):\n",
+    "    self.head = None"
+   ]
   }
  ],
  "metadata": {
