insert at beginning

--- a/linkedList.ipynb
+++ b/linkedList.ipynb
@@ -46,13 +46,18 @@
    "outputs": [],
    "source": [
     "class Node:\n",
-    "  def __init__(self, data, next):\n",
+    "  def __init__(self, data, next=None):\n",
     "    self.data = data\n",
     "    self.next = next\n",
     "\n",
     "class LinkedList:\n",
     "  def __init__(self):\n",
-    "    self.head = None"
+    "    self.head = None\n",
+    "  \n",
+    "  def insert_at_beginning(self, data):\n",
+    "    node = Node(data, self.head)\n",
+    "    self.head = node\n",
+    "    "
    ]
   }
  ],
