print function add

--- a/linkedList.ipynb
+++ b/linkedList.ipynb
@@ -57,7 +57,17 @@
     "  def insert_at_beginning(self, data):\n",
     "    node = Node(data, self.head)\n",
     "    self.head = node\n",
-    "    "
+    "    \n",
+    "  def print(self):\n",
+    "    if self.head is None:\n",
+    "      print(\"Linked List is empty\")\n",
+    "      return\n",
+    "    llstr = \"\"\n",
+    "    itr = self.head\n",
+    "    while itr:\n",
+    "      llstr += str(itr.data)\n",
+    "      itr = itr.next\n",
+    "    print(llstr)     "
    ]
   }
  ],
