--- a/linkedList.ipynb
+++ b/linkedList.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "d86c3e1c",
    "metadata": {},
    "outputs": [],
@@ -58,6 +58,15 @@
     "    node = Node(data, self.head)\n",
     "    self.head = node\n",
     "    \n",
+    "  def insert_at_end(self, data):\n",
+    "    if self.head is None:\n",
+    "      self.insert_at_beginning(data)\n",
+    "    itr = self.head\n",
+    "    while itr.next:\n",
+    "      # print(itr.data)\n",
+    "      itr = itr.next\n",
+    "    itr.next = Node(data)\n",
+    "    \n",
     "  def print(self):\n",
     "    if self.head is None:\n",
     "      print(\"Linked List is empty\")\n",
@@ -65,15 +74,52 @@
     "    llstr = \"\"\n",
     "    itr = self.head\n",
     "    while itr:\n",
-    "      llstr += str(itr.data)\n",
+    "      llstr += f\"{str(itr.data)}-> \" \n",
     "      itr = itr.next\n",
     "    print(llstr)     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "bd6d52c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25-> 5-> 35-> 55-> \n"
+     ]
+    }
+   ],
+   "source": [
+    "ll = LinkedList()\n",
+    "ll.insert_at_beginning(5)\n",
+    "ll.insert_at_beginning(25)\n",
+    "ll.insert_at_end(35)\n",
+    "ll.insert_at_end(55)\n",
+    "ll.print()\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
