insert values with list

--- a/linkedList.ipynb
+++ b/linkedList.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "d86c3e1c",
    "metadata": {},
    "outputs": [],
@@ -67,6 +67,12 @@
     "      itr = itr.next\n",
     "    itr.next = Node(data)\n",
     "    \n",
+    "  def insert_values(self, data_list):\n",
+    "    self.head = None\n",
+    "    while data_list:\n",
+    "      self.insert_at_end(data_list[0])\n",
+    "      data_list.pop(0)\n",
+    "    \n",
     "  def print(self):\n",
     "    if self.head is None:\n",
     "      print(\"Linked List is empty\")\n",
@@ -81,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "bd6d52c1",
    "metadata": {},
    "outputs": [
@@ -89,7 +95,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25-> 5-> 35-> 55-> \n"
+      "22-> 22-> 23-> 44-> 21-> 51-> 23-> 63-> \n"
      ]
     }
    ],
@@ -99,6 +105,7 @@
     "ll.insert_at_beginning(25)\n",
     "ll.insert_at_end(35)\n",
     "ll.insert_at_end(55)\n",
+    "ll.insert_values([22,23,44,21,51,23,63])\n",
     "ll.print()\n"
    ]
   }
