--- a/linkedList.ipynb
+++ b/linkedList.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "id": "d86c3e1c",
    "metadata": {},
    "outputs": [],
@@ -72,6 +72,14 @@
     "    while data_list:\n",
     "      self.insert_at_end(data_list[0])\n",
     "      data_list.pop(0)\n",
+    "      \n",
+    "  def length(self):\n",
+    "    count = 0\n",
+    "    itr = self.head\n",
+    "    while itr:\n",
+    "      count +=1\n",
+    "      itr = itr.next\n",
+    "    return count\n",
     "    \n",
     "  def print(self):\n",
     "    if self.head is None:\n",
@@ -87,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "id": "bd6d52c1",
    "metadata": {},
    "outputs": [
@@ -106,6 +114,8 @@
     "ll.insert_at_end(35)\n",
     "ll.insert_at_end(55)\n",
     "ll.insert_values([22,23,44,21,51,23,63])\n",
+    "ll.length()\n",
+    "\n",
     "ll.print()\n"
    ]
   }
