today's check-in

--- a/linkedList.ipynb
+++ b/linkedList.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "bd6d52c1",
    "metadata": {},
    "outputs": [
@@ -115,6 +115,7 @@
     "ll.insert_at_end(55)\n",
     "ll.insert_values([22,23,44,21,51,23,63])\n",
     "ll.length()\n",
+    "# today\n",
     "\n",
     "ll.print()\n"
    ]
