--- a/linkedList.ipynb
+++ b/linkedList.ipynb
@@ -116,6 +116,7 @@
     "ll.insert_values([22,23,44,21,51,23,63])\n",
     "ll.length()\n",
     "# today\n",
+    "#day 2 no code\n",
     "\n",
     "ll.print()\n"
    ]
