--- a/linkedList.ipynb
+++ b/linkedList.ipynb
@@ -118,6 +118,7 @@
     "# today\n",
     "#day 2 no code\n",
     "#day 4 no code\n",
+    "#day 6 no code\n",
     "\n",
     "ll.print()\n"
    ]
